# Validation_businessAgent

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  config.json  diagram.puml  docker-compose.yml  explanation.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/agents/: business.agent.md
.github/workflows/: ci-cd.yml
data/: payload.json
scripts/: ai_helper.py  print_file_with_numbers.py
src/: __init__.py  api.py  business_agent.py  langgraph_validator.py  main.py  utils.py  validator.py
tests/: test_additional_validator_branches.py  test_api.py  test_api_additional.py  test_business_agent_additional.py  test_business_agent_additional_targeted.py  test_business_agent_more.py  test_business_agent_targeted.py  test_langgraph.py  test_langgraph_extra.py  test_main.py  test_main_additional.py  test_main_extra.py  test_more_coverage.py  test_targeted_branches.py  test_targeted_coverage.py  test_targeted_remaining_coverage.py  test_utils_additional.py  test_utils_extra.py  test_utils_more.py  test_validator.py  test_validator_additional.py  test_validator_business_agent_extra.py  test_validator_extra_more2.py  test_validator_final_targeted.py  test_validator_targeted.py  test_validator_targeted_more.py
